--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-joi-validator": "^2.0.1",
+    "g": "^2.0.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "joi": "^14.3.1",
     "koa-joi-validator": "^4.0.0",
+    "logger": "0.0.1",
     "morgan": "~1.9.1",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
     "path": "^0.12.7",
-    "sequelize": "^5.8.5"
+    "sequelize": "^5.8.5",
+    "update": "^0.7.4",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.0"
