--- a/package.json
+++ b/package.json
@@ -3,25 +3,28 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
+    "bcrypt": "^3.0.6",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "ejs": "^2.6.1",
+    "express": "~4.16.0",
     "express-joi-validator": "^2.0.1",
-    "g": "^2.0.1",
-    "http-errors": "~1.6.3",
+    "express-validator": "^5.3.1",
+    "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "joi": "^14.3.1",
-    "koa-joi-validator": "^4.0.0",
-    "logger": "0.0.1",
-    "morgan": "~1.9.1",
+    "joi-phone-number": "^2.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "~1.9.0",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
-    "path": "^0.12.7",
+    "peer": "^0.2.10",
     "sequelize": "^5.8.5",
-    "update": "^0.7.4",
     "winston": "^3.2.1"
   },
   "devDependencies": {
