--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "^2.6.1",
-    "express": "~4.16.0",
+    "express": "^4.16.4",
     "express-joi-validator": "^2.0.1",
     "express-validator": "^5.3.1",
     "http-errors": "~1.6.2",
@@ -24,7 +24,7 @@
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
     "peer": "^0.2.10",
-    "sequelize": "^5.8.5",
+    "sequelize": "^5.8.6",
     "winston": "^3.2.1"
   },
   "devDependencies": {
