--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "morgan": "~1.9.0",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
+    "node-xlsx": "^0.15.0",
     "peer": "^0.2.10",
     "sequelize": "^5.8.6",
     "winston": "^3.2.1"
